@@ -6,6 +6,8 @@ SVN version
 [ADD] Hobo's can make zombie sounds by right clicking with the bugbait :P -- idea thanks to GoDNeSS
 [ADD] Pet job, IF YOU DONT LIKE IT, REMOVE THE JOB FROM SHARED.LUA AND NOONE WILL NOTICE ANYTHING ABOUT THE PET! -- THANKS GoDNeSS!
 [ADD] Eating food makes the TF2 nom sound(bad luck if you don't have TF2)
+[ADD] Poo and pee mod :D enable with rp_poopeemod 1
+[ADD] Anti slobbot server crash
 [FIX] Version number in the help screen
 [FIX] Battering ram not working on warranted people
 [FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
